*Empty MediaWiki Message*

--- a/პრეტორი.mw
+++ b/პრეტორი.mw
@@ -6,10 +6,11 @@
 
 [[ძვ. წ. 367]] წლიდან კი პრეტორი დაერქვა კონსულზე ქვემოთ მდგომ მაგისტრატუსს. ამ დროიდან პრეტორის ფუნქცია განისაზღვრა სასამართლოებში საქმეების გარჩევით, ხოლო კონსულის ქალაქში არ ყოფნის დროს, პრეტორს ეკუთვნოდა უმაღლესი ხელისუფლება.
 
-თავდაპრველად პრეტორი შეიძლებოდა გამხდარიყო მხოლოდ პატრიციუსი, მას ისევე როგორც კონსულს [[კომიცია|ცენტურიების კომიციაზე]] ირჩევდნენ. [[ძვ. წ. 337]] წლიდან კი ეს თანამდებობა პლებეებისთვისაც გახდა ხელმისაწვდომი.
+თავდაპრველად პრეტორი შეიძლებოდა გამხდარიყო მხოლოდ პატრიციუსი, მას ისევე როგორც კონსულს [[კომიცია|ცენტურიების კომიციაზე]] ირჩევდნენ ერთი წლის ვადით. [[ძვ. წ. 337]] წლიდან კი ეს თანამდებობა პლებეებისთვისაც გახდა ხელმისაწვდომი.
 
 [[ძვ. წ. 246]] წლიდან მეორე პრეტორის არჩევაც დაიწყო. პირველ პრეტორს ერქვა '''Praetor urbanus''' - ქალაქის პრეტორი და იგი არჩევდა საქმეებს რომლებიც მხოლოდ რომის მოქალაქეებს ეხებოდათ, მეორე პრეტორი კი '''Praetor peregrinus''' იხილავდა საქმეებს რომლებიც რომის მოქალაქეებსა და უცხოელებს, ან მხოლოდ უცხოელებს ეხებოდათ.
 
+იმპერიის ზრდამ გამოიწვია პრეტორების რაოდენობის ზრდა. [[ძვ. წ. 227]] წლიდან პრეტორებს ირჩევდნენ სიცილიაშიც და სარდინიაშიც. ორი ესპანური პროვინციის დამატების შემდეგ, [[ძვ. წ. 197]] წლიდან კი ორივე პროვინციას ჰყავდა თითო პრეტორი. პროვინციული პრეტორი ვადის გასვლის შემდეგ ხშირად ინიშნებოდა პროვინციის პროპრეტორად ან [[პროკონსული|პროკონსულად]], ანუ მმართველად.
 
 {{ისტორია-დასამუშავებელი}}
 
