*Empty MediaWiki Message*

--- a/პრეტორი.mw
+++ b/პრეტორი.mw
@@ -10,9 +10,12 @@
 
 [[ძვ. წ. 246]] წლიდან მეორე პრეტორის არჩევაც დაიწყო. პირველ პრეტორს ერქვა '''Praetor urbanus''' - ქალაქის პრეტორი და იგი არჩევდა საქმეებს რომლებიც მხოლოდ რომის მოქალაქეებს ეხებოდათ, მეორე პრეტორი კი '''Praetor peregrinus''' იხილავდა საქმეებს რომლებიც რომის მოქალაქეებსა და უცხოელებს, ან მხოლოდ უცხოელებს ეხებოდათ.
 
-იმპერიის ზრდამ გამოიწვია პრეტორების რაოდენობის ზრდა. [[ძვ. წ. 227]] წლიდან პრეტორებს ირჩევდნენ სიცილიაშიც და სარდინიაშიც. ორი ესპანური პროვინციის დამატების შემდეგ, [[ძვ. წ. 197]] წლიდან კი ორივე პროვინციას ჰყავდა თითო პრეტორი. პროვინციული პრეტორი ვადის გასვლის შემდეგ ხშირად ინიშნებოდა პროვინციის პროპრეტორად ან [[პროკონსული|პროკონსულად]], ანუ მმართველად.
+იმპერიის ზრდამ გამოიწვია პრეტორების რაოდენობის ზრდა. [[ძვ. წ. 227]] წლიდან პრეტორებს ირჩევდნენ სიცილიაშიც და სარდინიაშიც. ორი ესპანური პროვინციის დამატების შემდეგ, [[ძვ. წ. 197]] წლიდან კი ორივე პროვინციას ჰყავდა თითო პრეტორი. პროვინციული პრეტორი ვადის გასვლის შემდეგ ხშირად ინიშნებოდა პროვინციის პროპრეტორად ან [[პროკონსული|პროკონსულად]], ანუ მმართველად. 
 
-{{ისტორია-დასამუშავებელი}}
+[[სულა|სულამ]] პრეტორთა რაოდენობა 8-ს გაუტოლა, ხოლო [[იულიუს კეისარი|კეისარის]] დროს უკვე 16 პრეტორი ირჩეოდა. [[ოქტავიან ავგუსტუსი|ავგუსტუსმა]] რამდენიმე რეფორმის შედეგად პრეტორთა რაოდენობა 12-მდე დაიყვანა. [[ტიბერიუსი|ტიბერიუსმა]] კი ისევ 16-მდე გაზარდა.
+
+ადრეული [[რომის იმპერია|იმპერიის]] პერიოდში პრეტორთა ფუნქციები პრაქტიკულად არ შეცვლილა, შემდგომში მათაკვედუკებზე მეთვალყურეობაც დაევალათ. 
+
 
 
 
