*Empty MediaWiki Message*

--- a/პრეტორი.mw
+++ b/პრეტორი.mw
@@ -22,3 +22,25 @@
 
 [[კატეგორია:ძველი რომი]]
 [[კატეგორია:რომის სახელმწიფო ინსტიტუტები]]
+
+
+[[bg:Претор]]
+[[ca:Pretor]]
+[[da:Praetor]]
+[[de:Praetur]]
+[[en:Praetor]]
+[[es:Pretor]]
+[[et:Preetor]]
+[[fi:Preetori]]
+[[fr:Préteur]]
+[[he:פראיטור]]
+[[hu:Praetor]]
+[[it:Pretore (storia romana)]]
+[[ja:プラエトル]]
+[[nl:Praetor]]
+[[no:Praetor]]
+[[pl:Pretor]]
+[[pt:Pretor]]
+[[ru:Претор]]
+[[sv:Pretor]]
+[[zh:副執政]]
