--- a/ოსნაბრიუკი.mw
+++ b/ოსნაბრიუკი.mw
@@ -1,4 +1,4 @@
-[[სურათი:Lage der kreisfreien Stadt Osnabrück in Deutschland.GIF|thumb|right|ოსნაბრიუკი]]
+[[სურათი:Karte Osnabrück in Deutschland.png|thumb|right|ოსნაბრიუკი]]
 '''ოსნაბრიუკი''', ქალაქი [[გერმანია|გერმანიაში]], [[ქვემო საქსონია|ქვემო საქსონიის]] მხარეში. 164.453  ათ. მცხოვრებით (2004). ნავსადგური შუა გერმანიის არხის განშტოებაზე. მეტალურგიული, მანქანათსაშენი, საფეიქრო მრეწველობა.
 
 [[კატეგორია:გერმანიის ქალაქები]]
