*Empty MediaWiki Message*

--- a/რომის_მოქალაქეობა.mw
+++ b/რომის_მოქალაქეობა.mw
@@ -1,4 +1,5 @@
 {{რომის მთავრობა}}
+[[სურათი:Toga.png|thumb|left|რომის მოქალაქის ტოგა]]
 რომის მოქალაქის სტატუსი და ცნება დროთა განმავლობაში არაერთხელ შეიცვალა. თავდაპირველად [[რომის რესპუბლიკა|რესპუბლიკის]] პერიოდში რომის მოქალაქეობა ჰქონდათ რომის მკვირდ მოსახლეობას და ადრეული რესპუბლიკის და [[რომის სამეფო|მეფეების]] პერიოდში ჩამოსახლებულ [[საბინელები|საბინელებს]] და [[ეტრუსკები|ეტრუსკებს]]. რომის მოქალაქეებს შეეძლოთ მონაწილეობა მიეღოთ სახელმწიფოს პოლიტიკურ ცხოვრებაში და არჩეულიყვნენ მაგისტრატუსებათ, მოქალაქის მონად გაყიდვა დასასამართლოს გარეშე სიკვდილით დასჯა შეუძლებელი იყო და მხოლოს მოქალაქეს შეეძლო ლეგიონებში მსახურობა.
 
 [[კატეგორია:ძველი რომი]]
