*Empty MediaWiki Message*

--- a/რომის_მოქალაქეობა.mw
+++ b/რომის_მოქალაქეობა.mw
@@ -2,4 +2,10 @@
 [[სურათი:Toga.png|thumb|left|რომის მოქალაქის ტოგა]]
 რომის მოქალაქის სტატუსი და ცნება დროთა განმავლობაში არაერთხელ შეიცვალა. თავდაპირველად [[რომის რესპუბლიკა|რესპუბლიკის]] პერიოდში რომის მოქალაქეობა ჰქონდათ რომის მკვირდ მოსახლეობას და ადრეული რესპუბლიკის და [[რომის სამეფო|მეფეების]] პერიოდში ჩამოსახლებულ [[საბინელები|საბინელებს]] და [[ეტრუსკები|ეტრუსკებს]]. რომის მოქალაქეებს შეეძლოთ მონაწილეობა მიეღოთ სახელმწიფოს პოლიტიკურ ცხოვრებაში და არჩეულიყვნენ მაგისტრატუსებათ, მოქალაქის მონად გაყიდვა დასასამართლოს გარეშე სიკვდილით დასჯა შეუძლებელი იყო და მხოლოს მოქალაქეს შეეძლო ლეგიონებში მსახურობა.
 
+რომის მოქალაქის განმასხვავებელი სამოსი იყო [[ტოგა]], არამოქალაქეს მისი ტარების უფლება არ ჰქონდა.
+
+იტალიის მოსახლეობას ლათინური მოქალაქება ჰქონდა, მათი პოლიტიკური უფლებები რომის მოქალაქეებთან შედარებით შეზღუდული იყო, მაგრამ არამოქალაქეეზე მეტი უფლებები ჰქონდათ, მოკლედ ეს მოქალაქეებსა და არამოქალაქეებს შორის გარდამავალი რგოლი იყო.
+
+[[მოკავშირეთა ომი|მოკავშირეთა ომის]] შედეგად ([[ძვ. წ. I საუკუნე|ძვ. წ. I საუკუნის]] დასაწყისში]]) [[ძვ. წ. 88]] წლის კანონით მოქალაქეობა მიიღო იტალიის იმ მოსახლეობამ ვინც შეწყვიტა ომი და დაყარა იარაღი. 
+
 [[კატეგორია:ძველი რომი]]
