*Empty MediaWiki Message*

--- a/რომის_მოქალაქეობა.mw
+++ b/რომის_მოქალაქეობა.mw
@@ -6,6 +6,14 @@
 
 იტალიის მოსახლეობას ლათინური მოქალაქება ჰქონდა, მათი პოლიტიკური უფლებები რომის მოქალაქეებთან შედარებით შეზღუდული იყო, მაგრამ არამოქალაქეეზე მეტი უფლებები ჰქონდათ, მოკლედ ეს მოქალაქეებსა და არამოქალაქეებს შორის გარდამავალი რგოლი იყო.
 
-[[მოკავშირეთა ომი|მოკავშირეთა ომის]] შედეგად ([[ძვ. წ. I საუკუნე|ძვ. წ. I საუკუნის]] დასაწყისში]]) [[ძვ. წ. 88]] წლის კანონით მოქალაქეობა მიიღო იტალიის იმ მოსახლეობამ ვინც შეწყვიტა ომი და დაყარა იარაღი. 
+[[მოკავშირეთა ომი|მოკავშირეთა ომის]] შედეგად ([[ძვ. წ. I საუკუნე|ძვ. წ. I საუკუნის]] დასაწყისში) [[ძვ. წ. 88]] წლის კანონით მოქალაქეობა მიიღო იტალიის იმ მოსახლეობამ ვინც შეწყვიტა ომი და დაყარა იარაღი.
+
+რომის მოქალაქეიობის მიღება კიდევ შეიძლებოდა სახელმწიფოს წინაშე განსაკუთრებული დამსახურებებით მიღება, ამის გარდა განთავისუფლებული მონებიც ავტომატურად იღებდნენ მოქალაქეობას.
+
+[[რომის იმპერია|იმპერიის]] პერიოდში მოქალაქეებმა პოლიტიკური უფლებები ფორმალურად არ დაკარგეს, მაგრამ პოლიტიკურ ძალას აღარ წარმოადგენდნენ. [[ოქტავიან ავგუსტუსი|ავგუსტუსი]] ყველანაერად ცდილობდა მოქალაქის სტატუსი აემაღლებინა და განსაკუთრებით პრივილიგირებული გაეხადა, ამიტომ არამოქალაქეებისთვის მოქალაქეობის მიღებას იგი ყველანაერად ართულებდა.
+
+[[ვესპასიანე|ვესპასიანეს]] დროს კი იტალიის მთელმა მოსახლეობამ მიიღო მოქალაქეობა. ამ ეპოქაში მოქალაქეობის ყიდვაც შეიძლებოდა, მართალია ძალიან ძვირად. ამის შემდეგ მოქალაქეობას ანიწებდნენ მთელი ქალაქების მოსახლეობას, როდესაც ისინი რაიმე რთულ პირობებში რომის ერთგულები რჩებოდნენ.
+
+[[212]] წლის კანონით კი მოქალაქეობა იმპერიის ყველა თავისუფალმა მამაკაცმა მიიღო.
 
 [[კატეგორია:ძველი რომი]]
