--- a/რომის_მოქალაქეობა.mw
+++ b/რომის_მოქალაქეობა.mw
@@ -1,6 +1,6 @@
 {{რომის მთავრობა}}
 [[სურათი:Toga.png|thumb|left|რომის მოქალაქის ტოგა]]
-რომის მოქალაქის სტატუსი და ცნება დროთა განმავლობაში არაერთხელ შეიცვალა. თავდაპირველად [[რომის რესპუბლიკა|რესპუბლიკის]] პერიოდში რომის მოქალაქეობა ჰქონდათ რომის მკვირდ მოსახლეობას და ადრეული რესპუბლიკის და [[რომის სამეფო|მეფეების]] პერიოდში ჩამოსახლებულ [[საბინელები|საბინელებს]] და [[ეტრუსკები|ეტრუსკებს]]. რომის მოქალაქეებს შეეძლოთ მონაწილეობა მიეღოთ სახელმწიფოს პოლიტიკურ ცხოვრებაში და არჩეულიყვნენ მაგისტრატუსებათ, მოქალაქის მონად გაყიდვა დასასამართლოს გარეშე სიკვდილით დასჯა შეუძლებელი იყო და მხოლოს მოქალაქეს შეეძლო ლეგიონებში მსახურობა.
+რომის მოქალაქის სტატუსი და ცნება დროთა განმავლობაში არაერთხელ შეიცვალა. თავდაპირველად [[რომის რესპუბლიკა|რესპუბლიკის]] პერიოდში რომის მოქალაქეობა ჰქონდათ რომის მკვირდ მოსახლეობას და ადრეული რესპუბლიკის და [[რომის სამეფო|მეფეების]] პერიოდში ჩამოსახლებულ [[საბინელები|საბინელებს]] და [[ეტრუსკები|ეტრუსკებს]]. რომის მოქალაქეებს შეეძლოთ მონაწილეობა მიეღოთ სახელმწიფოს პოლიტიკურ ცხოვრებაში და არჩეულიყვნენ მაგისტრატუსებათ, მოქალაქის მონად გაყიდვა დასასამართლოს გარეშე სიკვდილით დასჯა შეუძლებელი იყო და მხოლოს მოქალაქეს შეეძლო ლეგიონებში მსახურობა, მხოლოდ რომის მოქალაქეების ქორწინება ითვლებოდა კანონიერად და მათ ასევე ჰქონდათ კონტრაქტების დადების უფლება.
 
 რომის მოქალაქის განმასხვავებელი სამოსი იყო [[ტოგა]], არამოქალაქეს მისი ტარების უფლება არ ჰქონდა.
 
