/* რესპუბლიკის სახელმწიფო წყობა */

--- a/რომის_რესპუბლიკა.mw
+++ b/რომის_რესპუბლიკა.mw
@@ -9,7 +9,7 @@
 
 '''რომის რესპუბლიკა''' წარმოიქმნა [[ძვ. წ. 510]] წელს და იარსება სანამ არ გარდაიქმნა იმპერიად. 
 
-მონარქიის დამხობის შემდეგ რომში ჩამოყალიბდა რესპუბლიკური წყობა. რომის მოქალაქეები იყოფოდა [[პატრიციები|პატრიციებად]] და [[პლებეები|პლებეებად]]. რესპუბლიკის ადრეულ პერიოდში ეს გაყოფა ალბათ ქონებრივ ცენზთან იყო დაკავშირებული, ხოლო გვიანდელ რესპუბლიკაში პატრიციები პლებეებისგან მხოლოდ იმით განსხვავდებოდნენ, რომ მათ სასულიერო იერარქიაში ჰქონდათ მაღალი ადგილების დაკავების უფლება. 
+მონარქიის დამხობის შემდეგ რომში ჩამოყალიბდა რესპუბლიკური წყობა. [[რომის მოქალაქეობა|რომის მოქალაქეები]] იყოფოდა [[პატრიციები|პატრიციებად]] და [[პლებეები|პლებეებად]]. რესპუბლიკის ადრეულ პერიოდში ეს გაყოფა ალბათ ქონებრივ ცენზთან იყო დაკავშირებული, ხოლო გვიანდელ რესპუბლიკაში პატრიციები პლებეებისგან მხოლოდ იმით განსხვავდებოდნენ, რომ მათ სასულიერო იერარქიაში ჰქონდათ მაღალი ადგილების დაკავების უფლება. 
 
 რომის მოქალაქეობა დაპყრობილი ერების მართვის და მათგან გამიჯვნის ინსტრუმენტი იყო. არსებობდა მოქალაქეობის რამოდენიმე დონე. (ასევე არსებობდა ლათინური მოქალაქეობაც). 
 
