--- a/ფილიპიკოსი_(ბიზანტია).mw
+++ b/ფილიპიკოსი_(ბიზანტია).mw
@@ -9,3 +9,14 @@
 
 ==იხილე აგრეთვე==
 * [[ბიზანტიის იმპერატორთა სია]]
+
+[[cs:Filippikos Bardanes]]
+[[de:Philippikos]]
+[[en:Philippicus]]
+[[es:Filípico]]
+[[fi:Philippikos]]
+[[fr:Philippicos]]
+[[hu:Philippikosz]]
+[[it:Filippico di Bisanzio]]
+[[ja:フィリピコス・バルダネス]]
+[[pl:Filipikos Bardanes]]
