--- a/ბიზანტიის_იმპერატორების_სია.mw
+++ b/ბიზანტიის_იმპერატორების_სია.mw
@@ -147,3 +147,28 @@
 * [[მანუელ II (ბიზანტია)| მანუელ II]] (1391–1425)
 * [[იოანე VIII (ბიზანტია)| იოანე VIII]] (1425–1448)
 * [[კონსტანტინე XI (ბიზანტია)|კონსტანტინე XI]] (1449–1453)
+
+
+[[cs:Seznam byzantských císařů]]
+[[cy:Rhestr Ymerodron Caergystennin]]
+[[de:Liste der byzantinischen Kaiser]]
+[[en:List of Byzantine emperors]]
+[[eo:Listo de orient-romiaj imperiestroj]]
+[[es:Emperadores bizantinos]]
+[[et:Ida-Rooma keisrite loend]]
+[[fi:Luettelo Bysantin keisareista]]
+[[fr:Liste des empereurs byzantins]]
+[[he:קיסרי ביזנטיון]]
+[[hr:Popis Bizantskih careva]]
+[[hu:Bizánci császárok listája]]
+[[it:Imperatori bizantini]]
+[[ja:ローマ皇帝一覧#東ローマ帝国]]
+[[ms:Daftar Maharaja Byzantine]]
+[[nl:Lijst van Byzantijnse keizers]]
+[[no:Liste over bysantinske keisere]]
+[[pl:Cesarze bizantyjscy]]
+[[pt:Lista de imperadores bizantinos]]
+[[ru:Византийские императоры]]
+[[sk:Zoznam vládcov Byzantskej ríše]]
+[[sv:Bysantinska kejsare]]
+[[zh:拜占庭皇帝列表]]
