--- a/ტრაპიზონის_იმპერატორთა_სია.mw
+++ b/ტრაპიზონის_იმპერატორთა_სია.mw
@@ -21,4 +21,19 @@
 * [[მანუელ III (ტრაპიზონი)|მანუელ III]] (1390-1417)
 * [[ალექსი IV (ტრაპიზონი)|ალექსი IV]] (1417-1447)
 * [[იოანე IV (ტრაპიზონი)|იოანე IV]] (1447-1458)
+
+[[de: Kaiserreich Trapezunt]]
+[[en:Empire of Trebizond]]
+[[es:Imperio de Trebisonda]]
+[[fr:Empire grec de Trébizonde]]
+[[hu:Trapezunti Császárság]]
+[[it:Impero di Trebisonda]]
+[[ja:トレビゾンド帝国]]
+[[nl:Keizerrijk Trebizonde]]
+[[pl:Cesarstwo Trapezuntu]]
+[[sk:Trapezuntské cisárstvo]]
+[[sr:Трапезунтско царство]]
+[[sv:Kejsardömet Trabzon]]
+[[tr:Trabzon Rum Devleti]]
+
 * [[დავით I (ტრაპიზონი )|დავით I]] (1458-1462)
