*Empty MediaWiki Message*

--- a/დართლო.mw
+++ b/დართლო.mw
@@ -2,8 +2,8 @@
 '''დართლო''', სოფელი [[ახმეტის რაიონი|ახმეტის რაიონში]], [[თუშეთი|თუშეთში]], [[პირიქითი ქედი|პირიქითი ქედის]] სამხრეთ კალთაზე, [[დიდხევი|მდინარე დიდხევის]] ([[პირიქითი ალაზანი|პირიქითი ალაზნის]] მარცხენა [[შენაკადი]]) მარჯვენა მხარეს. ზღვის დონიდან 2000 მ, [[ახმეტა|ახმეტიდან]] 102 კმ. მიმოსვლა [[ცხენი|ცხენის]] [[ბილიკი|ბილიკით]] და [[საჰაერო გზა|საჰაერო გზით]].
 
 <gallery>
-სურათი:Dartlo2-2400.jpg|დართლო 1992|
-სურათი:Darto-2400.jpg|დართლო 1992|
+სურათი:Dartlo2-2400.jpg|დართლო 1992
+სურათი:Darto-2400.jpg|დართლო 1992
 </gallery
 
 [[კატეგორია:საქართველოს სოფლები]]
