*Empty MediaWiki Message*

--- a/ლიქტორი.mw
+++ b/ლიქტორი.mw
@@ -8,7 +8,7 @@
 
 ლიქტორს ევალებოდა მაგისტრატუსის დაცვა და მისი ძალაუფლების სიმბოლოს - [[ფაცები|ფაცების]] ტარება, ქალაგარეთ კი ფაცებში ნაჯახები იდებოდა. [[დიქტატორი|დიქტატორის]] ლიქტორები კი ყოველთვის ატარებდნენ ნაჯახებს. ისინი მაგისტრატუსს ყოველთვის თან დაყვებოდნენ. ისტორიული წყაროების მიხედვით ადრეული რესპუბლიკის პერიოდში ლიქტორი მაგისტრატუსის მიერ გამონატილ განაჩენსაც ასრულებდა.
 
-[[ვერსტა|ვესტას]] ქურუმებსაც ახლდათ თითო ლიქტორი, როდესაც ისინი საჯარო ღონისძიებებში იღებდნენ მონაწილეობას. მაგისტრუსების ლიქტორების რაოდენობა მკაცრად ლიმიტირებული იყო, რაც უფრო მეტი ლიქტორი ახლდა მაგისტრუსს, მით უფრო მაღალი რანგი ეკავა მას.
+[[ვერსტა|ვესტას]] ქურუმებსაც ახლდათ თითო ლიქტორი, როდესაც ისინი საჯარო ღონისძიებებში იღებდნენ მონაწილეობას. მაგისტრუსების ლიქტორების რაოდენობა მკაცრად რეგლამენტირებული იყო, რაც უფრო მეტი ლიქტორი ახლდა მაგისტრუსს, მით უფრო მაღალი რანგი ეკავა მას.
 
 * [[დიქტატორი]] - 24 ლიქტორი
 * [[კონსული]] - 12 ლიქტორი
