*Empty MediaWiki Message*

--- a/რომის_იმპერია.mw
+++ b/რომის_იმპერია.mw
@@ -76,11 +76,11 @@
 
 პროვინციების უმეტესობამ სცნო ოტო, მაგრამ ვიტელიუსი არ შეეგუა ბედს და გერმანული ლეგიონებით შეიჭრა იტალიაში. 69 წლის აპრილში მოხდა ოტოს და ვიტელიუსის ჯარებს შორის შეტაკება, სადაც ოტო დამარცხდა და თავი მოიკლა. ვიტელიუსი აღიარეს იმპერატორად, მაგრამ მისი ლეგიონერები იტალიაში ისე იქცეოდნენ, როგორც მტრის მიწაზე. ვიტელიუსიც კი აღშფოთდა მარადიორობის მაშტაბებით და ლეგიონები გერმანიაში დააბრუნა ამით მისი პოზიციებიც რომში დასუსტდა.
 
-[[იუდეის ომი|იუდეის აჯანყება]] ნაწილობრივ უკვე ჩახშობილი იყო ვესპასიანის მიერ, მარტო [[იერუსალიმი]] იყო ასაღები. 69 წლის ზაფხულში აღმოსავლური პროვინციების მმართველებმა იმპერატორად ვესპასიანი აღიარეს. სენატმაც იგი ამჯობინა ვიტელიუსს. მალე ვერპასიანის მხარეს პროვინციების უმეტესობა გადმოვიდა. იმავე წელს მან დაამარცხა ვიტელიუსის ჯარი და გახდა იმპერატორი. ასე დაიწყო ფლავიუსების დინასტიის მმართველობა.
+[[იუდეის ომი|იუდეის აჯანყება]] ნაწილობრივ უკვე ჩახშობილი იყო ვესპასიანეს მიერ, მარტო [[იერუსალიმი]] იყო ასაღები. 69 წლის ზაფხულში აღმოსავლური პროვინციების მმართველებმა იმპერატორად ვესპასიანე აღიარეს. სენატმაც იგი ამჯობინა ვიტელიუსს. მალე ვერპასიანის მხარეს პროვინციების უმეტესობა გადმოვიდა. იმავე წელს მან დაამარცხა ვიტელიუსის ჯარი და გახდა იმპერატორი. ასე დაიწყო ფლავიუსების დინასტიის მმართველობა.
 
 ==ფლავიუსების დინასტია==
 
-===ვესპასიანი და ტიტუსი===
+===ვესპასიანე და ტიტუსი===
 [[სურათი:Vespasian-coin.jpg|thumb|ვერსპასიანის გამოსახულება მონეტაზე]]
 
 ვესპასიანე აღიარეს როგორც სენატორებმა, ასევე ლეგიონერებმაც. მაგრამ იმპერიაში მშვიდობა ჯერ არ სუფევდა. იუდეაში აჯანყება გრძელდებოდა, აჯანყდა ასევე გალიაც და ქვემო გერმანიაც. [[70]] წელს, როდესაც იტალიაში სამოქალაქო ომი დასრულდა, რომის ლეგიონებმა ვესპასიანეს ვაჟის, [[ფლავიუსი, ტიტუს|ტიტუსის]] მეთაურობით აიღეს [[იერუსალიმი]] და დაანგრიეს ტაძარი. აჯანყება არნახული სისასტიკით ჩაახშვეს. იერუსალიმი მიწასთან გაასწორეს, ხოლო მოსახლეობა მონებად გაყიდეს. იუდეამ ამ დღიდან არსებობა შეწყვიტა. აჯანყებულების ბრძოლა კი კიდევ 3 წლის მანძილზე გრძელდებოდა.
@@ -92,17 +92,17 @@
 [[სურათი:Coliseorek.jpg|thumb|left|კოლიზეუმის რეკონსტრუქცია]]
 
 [[სურათი:Coliseodges.GIF|thumb|კოლიზეუმი დღეს]]
-ვესპასიანის მმართველობის პერიოდში მოხდა პროვინციების რომანიზაცია. სენატორები ახლა არა მარტო რომაული წარმოშობის იყვნენ, არამედ პროვინციული არისტოკრატებიც. მეორე მხრივ ამან ლათინების გათქვეფა და მომდევნო გადაშენება გამოიწვია. ბევრ ესპანურ და გალურ ქალაქებს მან ლათინური და რომაული მოქალაქეობა უბოძა. ვესპასინემ გააუქმა ყველა ის პრივილეგია რაც ნერონმა უბოძა ბერძნულ ქალაქებს. მან ასევე შეუერთა იმპერიას როდოსი, კილია, ბიზანტიუმი, სამოსი, კილიკია და კომაგენა. 
+ვესპასიანეს მმართველობის პერიოდში მოხდა პროვინციების რომანიზაცია. სენატორები ახლა არა მარტო რომაული წარმოშობის იყვნენ, არამედ პროვინციული არისტოკრატებიც. მეორე მხრივ ამან ლათინების გათქვეფა და მომდევნო გადაშენება გამოიწვია. ბევრ ესპანურ და გალურ ქალაქებს მან ლათინური და რომაული მოქალაქეობა უბოძა. ვესპასინემ გააუქმა ყველა ის პრივილეგია რაც ნერონმა უბოძა ბერძნულ ქალაქებს. მან ასევე შეუერთა იმპერიას როდოსი, კილია, ბიზანტიუმი, სამოსი, კილიკია და კომაგენა. 
 
 რომში მან დაიწყო [[კოლიზეუმი|კოლიზეუმის]] მშენებლობა და აღადგინა კაპიტოლიუმი. მან შეძლო იმპერიის ეკონომიკის აღორძინება, საზღვრების გამაგრება და პართიასთან მშვიდობის შენარჩუნება. ვესპასიანე [[79]] წელს გარდაიცვალა.
 
 [[სურათი:Titus bust.jpg|thumb|left|ტიტუსი]]
 ვესპასიანეს გარდაცვალების შემდეგ, იმპერატორი მისი უფროსი ვაჟი ტიტუსი გახდა. მას თანამედროვენი ძალიან დადებითად ახასიათებდნენ, მაგრამ მისი მმართველობა მხოლოდ ორი წელი გაგრძელდა, რადგან [[81]] წელს იგი გარდაიცვალა. მისი მმართველობის დროს მოხდა საშინელი კატასტროფა, ვულკანმა ვეზუვიმ ამოხეთქა და გაანადგურა ქალაქები პომპეუსი, ჰერკულანუმი და სტაბიუმი.
 
-===დომიციანი===
-[[სურათი:Domi6.JPG|thumb|დომიციანი]]
+===დომიციანე===
+[[სურათი:Domi6.JPG|thumb|დომიციანე]]
 
-ტიტუსის გარდაცვალების შემდეგ პრეტორიანელებმა იმპერატორად მისი უმცროსი ძმა [[დომიციანი]] აღიარეს. იგი უფროს ძმას და მამას თითქმის არაფრით არ ჰგავდა, ხასიათის და ქცევებით იგი იულიუ-კლავდიუსების დინასტიის "სახელგანთქმულ" იმპერატორებს დაემსგავსა. მან ჯერ კიდევ გაპრინცეპსტებამდე გაიფუჭა სენატთან ურთიერთობა და ეყრდნობოდა მხოლოდ სამხედროებს. მიუხედავად ამისა იგი ცდილობდა შეენარჩუნებინა პოპულარობა პლებსში, რისთვისაც ხშირად აწყობდა ნაირნაირ სანახაობებს.
+ტიტუსის გარდაცვალების შემდეგ პრეტორიანელებმა იმპერატორად მისი უმცროსი ძმა [[დომიციანე]] აღიარეს. იგი უფროს ძმას და მამას თითქმის არაფრით არ ჰგავდა, ხასიათის და ქცევებით იგი იულიუ-კლავდიუსების დინასტიის "სახელგანთქმულ" იმპერატორებს დაემსგავსა. მან ჯერ კიდევ გაპრინცეპსტებამდე გაიფუჭა სენატთან ურთიერთობა და ეყრდნობოდა მხოლოდ სამხედროებს. მიუხედავად ამისა იგი ცდილობდა შეენარჩუნებინა პოპულარობა პლებსში, რისთვისაც ხშირად აწყობდა ნაირნაირ სანახაობებს.
 
 მისი მმართველობის პერიოდში შემოერთებულ იქნა გერმანიის სამხრეთ დასავლეთი, სადაც ვეტერანების კოლონიები შეიქმნა. დუნაის პირეთზე კი დაკების, მარკომანების და სარმატების ტომებმა სერიოზულად დაამარცხეს რომაელები, ომი [[89]] წლამდე გრძელდებოდა, სანამ დომიციანმა დაკების ბელადთან სამშვიდობო ხელშეკრულება არ დადო. ამ ხელშეკრულებამ რომაელების უკმაყოფილება გამოიწვია. ბრიტანეთში სამხედრო მოქმედებები წარმატებით ხორციელდებოდა, მაგრამ აღმოსავლეთ პროვინციებში მცირე აზიიდან კაკასიის მიმართულებით ექსპანსია ვერ განხორციელდა. 
 
@@ -111,30 +111,30 @@
 ==ანტონინების დინასტია==
 [[სურათი:Nerva2.JPG|thumb|ნერვა]]
 
-ნერვას იმპერატორობის არჩევით ლეგიონერები და პრეტორიანელები უკმაყოფილონი დარჩნენ, ამიტომ მათ გადმოსაბირებლად მან იშვილა ზემო გერმანიის მმართველი [[ტრაიანი|მარკუს ულპიუს ტრაიანი]]. ამგვარად ჩამოყალიბდა იმპერატორთა მემკვიდრეობის ახალი ფორმა, პრინცეპსტობა უკვე არა მამიდან შვილზე ან უახლოეს ნათესავზე გადადიოდა, არამედ სენატის რჩეულზე, რომელსაც მოქმედი იმპერატორი იშვილებდა. ამგვარად ანტონიუსების დინასტიის წარმომადგენლები ერთმანეთის სისხლით ნათესავები აღარ იყვნენ. იმპერატორი არჩევის შემდეგ ფიცს დებდა რომ სენატის განაჩენის გარეშე სენატორს არ დასჯიდა სიკვდილით და მხოლოდ ამ პირობით დებდა სენატი იმპერატორისადმი ერთგულების ფიცს.
+ნერვას იმპერატორობის არჩევით ლეგიონერები და პრეტორიანელები უკმაყოფილონი დარჩნენ, ამიტომ მათ გადმოსაბირებლად მან იშვილა ზემო გერმანიის მმართველი [[ტრაიანე|მარკუს ულპიუს ტრაიანე]]. ამგვარად ჩამოყალიბდა იმპერატორთა მემკვიდრეობის ახალი ფორმა, პრინცეპსტობა უკვე არა მამიდან შვილზე ან უახლოეს ნათესავზე გადადიოდა, არამედ სენატის რჩეულზე, რომელსაც მოქმედი იმპერატორი იშვილებდა. ამგვარად ანტონიუსების დინასტიის წარმომადგენლები ერთმანეთის სისხლით ნათესავები აღარ იყვნენ. იმპერატორი არჩევის შემდეგ ფიცს დებდა რომ სენატის განაჩენის გარეშე სენატორს არ დასჯიდა სიკვდილით და მხოლოდ ამ პირობით დებდა სენატი იმპერატორისადმი ერთგულების ფიცს.
 
 ნერვამ ჩაატარა ახალი აგრარული რეფორმა, რომლითაც გაღატაკებულ მოსახლეობას დაურიგა მიწები, მისი მმართველობის დროს ასევე შეიქმნა "ალიმენტარული ფონდი" ობოლ ბავშვთა მოსავლელად და აღსაზრდელად. [[98]] წელს ნერვა გარდაიცვალა.
 
-===ტრაიანი===
-[[სურათი:Trajan-thumb.jpg|thumb|left|ტრაიანი]]
+===ტრაიანე===
+[[სურათი:Trajan-thumb.jpg|thumb|left|ტრაიანე]]
 
-ნერვას სიკვდილის შემდეგ [[96]] წელს, იმპერატორი მისი შვილობილი ტრაიანი გახდა. იგი წარმოშვებით ესპანეთიდან იყო. რომის იმპერატორი პირველად გახდა პროვინციალი. ეს მიუთითებს თუ რა მდგომარეობა ეკავათ იმპერიასი იმ დროს რომანიზებულ დასავლეთ პროვინციებს. იგი ენერგიული ადმინისტრატორი და კარგი მხედართმთავარი იყო. იგი ცდილობდა სენატთან კარგი ურთიერთობა შეენარჩუნებინა, რომელიც უკვე არა ძველი ლათინური არისტოკრატებით იყო უმეტესად დაკომპლექტებული, არამედ მასში უკვე პროვინციალი არისტოკრატები ჭარბობდნენ.
+ნერვას სიკვდილის შემდეგ [[96]] წელს, იმპერატორი მისი შვილობილი ტრაიანე გახდა. იგი წარმოშვებით ესპანეთიდან იყო. რომის იმპერატორი პირველად გახდა პროვინციალი. ეს მიუთითებს თუ რა მდგომარეობა ეკავათ იმპერიასი იმ დროს რომანიზებულ დასავლეთ პროვინციებს. იგი ენერგიული ადმინისტრატორი და კარგი მხედართმთავარი იყო. იგი ცდილობდა სენატთან კარგი ურთიერთობა შეენარჩუნებინა, რომელიც უკვე არა ძველი ლათინური არისტოკრატებით იყო უმეტესად დაკომპლექტებული, არამედ მასში უკვე პროვინციალი არისტოკრატები ჭარბობდნენ.
 
 მისი იმპერატორობის დროს სენატს მეტი უფლებამოსილება მიენიჭა. იგი ასევე ცდილობდა აღედგინა რომაული არმიის ავტორიტეტი. [[101]] წელს მან დაკიასთან დაიწყო ომი. დაკები მხოლოდ 2 წლიანი გაცხარებული ბრძოლების შედეგად დანებდნენ. ომი [[105]] წელა განახლდა დაკების რომაულ გარნიზონებზე თავდასხმით, რაზეც რომაელებმა [[106]] წელს დაკიაში შეჭრით და მომდევნო წელს მისი პროვინციათ ქცევით უპასუხეს. ამ გამარჯვების ღსანიშნავად ტრაიანმა ახალი ფორუმი ააშენა და მის ცენტრში 40 მეტრის სიმაღლის სვეტი აღმართა.
 
-[[109]] წელს იმპერატორმა პართიასთან ომისთვის მზადება დაიწყო. იმავე წელს რომაელები კავკასიის რეგიონში შეიჭრნენ და [[კოლხეთი|კოლხებს]] და [[იბერია|იბერიელებს]] მათი ბატონობა აღიარებინეს. [[111]] წელს რომაელებმა [[სინის ნახევარკუნძული]] და [[არაბეთი|არაბეთის]] ჩრდილო დასავლეთი დაიპყრეს. [[114]] წელს კი ტრაიანი სასომხეთში შეიჭრა და იგი რომის პროვინციათ აქცია. მომდევნო წელს კი რომაელმა ლეგიონერებმა მესოპოტამიის დიდი ნაწილი დაიკავეს. [[116]] წელს რომაელებმა უკვე პართიის დედაქალაქი [[ქტეზიფონი]] დაიკავეს. ასურეთი მესოპოტამია და ბაბილონია რომის პროვინციებად იქცა. ამით ტრაიანმა ომის დასრულება გამოაცხადა, მაგრამ 116 წლის ბოლოს აჯანყება ატყდა არა მარტო დაპყრობილ შუამდინარეთში, არამედ ეგვიპტეში, კირენაკიაში და კიპრზე. ამ აჯანყების ჩასახშობად ტრაიანს მოუწია აღმოსავლური არმიის ნაწილის გაგზავნა, რითიც ისარგებლეს პართიელებმა და დარჩენილი ლეგიონები გაწყვიტეს. 
-[[სურათი:Roemischeprovinzentrajan.png|thumb|რომის იმპერია ტრაიანის პრინციპატისას]]
+[[109]] წელს იმპერატორმა პართიასთან ომისთვის მზადება დაიწყო. იმავე წელს რომაელები კავკასიის რეგიონში შეიჭრნენ და [[კოლხეთი|კოლხებს]] და [[იბერია|იბერიელებს]] მათი ბატონობა აღიარებინეს. [[111]] წელს რომაელებმა [[სინის ნახევარკუნძული]] და [[არაბეთი|არაბეთის]] ჩრდილო დასავლეთი დაიპყრეს. [[114]] წელს კი ტრაიანე სასომხეთში შეიჭრა და იგი რომის პროვინციათ აქცია. მომდევნო წელს კი რომაელმა ლეგიონერებმა მესოპოტამიის დიდი ნაწილი დაიკავეს. [[116]] წელს რომაელებმა უკვე პართიის დედაქალაქი [[ქტეზიფონი]] დაიკავეს. ასურეთი მესოპოტამია და ბაბილონია რომის პროვინციებად იქცა. ამით ტრაიანმა ომის დასრულება გამოაცხადა, მაგრამ 116 წლის ბოლოს აჯანყება ატყდა არა მარტო დაპყრობილ შუამდინარეთში, არამედ ეგვიპტეში, კირენაკიაში და კიპრზე. ამ აჯანყების ჩასახშობად ტრაიანს მოუწია აღმოსავლური არმიის ნაწილის გაგზავნა, რითიც ისარგებლეს პართიელებმა და დარჩენილი ლეგიონები გაწყვიტეს. 
+[[სურათი:Roemischeprovinzentrajan.png|thumb|რომის იმპერია ტრაიანეს პრინციპატისას]]
 
-[[117]] წლის ზაფხულში რომაელებს მოუწიათ სამხრეთ შუამდინარეთის დატოვება, ხოლო მოგვიანებით მესოპოტამიის დიდი ნაწილისაც. რომის არმია ძალიან დასუსტდა. ტრაიანს უნდოდა აღედგინა არმიის ბრძოლისუნარიანობა და გაეგრძელებინა ომი. ამისთვის იგი გაემგზავრა რომისკენ, მაგრამ გზაში ავად გახდა და მოკვდა. რომაელების მეხსიერებაში ტრაიანი დარჩა როგორც საუკეთესო პრინცეპსტი, ალბათ უფრო იმიტომ რომ მმართველობის პერიოდის უმეტესობა ლაშქრობებში გაატარა, ხოლო სახელმწიფოს მართვა სენატს ანდო.
+[[117]] წლის ზაფხულში რომაელებს მოუწიათ სამხრეთ შუამდინარეთის დატოვება, ხოლო მოგვიანებით მესოპოტამიის დიდი ნაწილისაც. რომის არმია ძალიან დასუსტდა. ტრაიანს უნდოდა აღედგინა არმიის ბრძოლისუნარიანობა და გაეგრძელებინა ომი. ამისთვის იგი გაემგზავრა რომისკენ, მაგრამ გზაში ავად გახდა და მოკვდა. რომაელების მეხსიერებაში ტრაიანე დარჩა როგორც საუკეთესო პრინცეპსტი, ალბათ უფრო იმიტომ რომ მმართველობის პერიოდის უმეტესობა ლაშქრობებში გაატარა, ხოლო სახელმწიფოს მართვა სენატს ანდო.
 
-===ადრიანუსი===
-[[სურათი:Hadrian2.jpg|thumb|left|ადრიანუსი]]
+===ადრეანე===
+[[სურათი:Hadrian2.jpg|thumb|left|ადრეანე]]
 
-ტრაიანის სიკვდილის შემდეგ იმპერატორი გახდა [[ადრიანუსი|პუბლიუს ელიუს ადრიანუსი]]. იგი კარგად ხვდებოდა რომ ჩაუხშობელი აჯანყებების ფონზე პართიასთან ომის გაგრძელება შეუძლებელია. ამიტომ მან ხელი მოაწერა სამშვიდობო ხელშეკრულებას, რომლის მიხედვითაც იგი ტრაიანის ყველა დაპყრობაზე არაბეთის გარდა უარს ამბობდა. იგი წინამორბედისგან განსხვავებით ყურადღებას თავდაცვას უფრო უთმობდა. მის დროს ხდებოდა იმპერიის საზღვრებზე ციხესიმაგრეების და სხვა თავდაცვითი შენობების მშენებლობა. 
+ტრაიანეს სიკვდილის შემდეგ იმპერატორი გახდა [[ადრეანე|პუბლიუს ელიუს ადრეანე]]. იგი კარგად ხვდებოდა რომ ჩაუხშობელი აჯანყებების ფონზე პართიასთან ომის გაგრძელება შეუძლებელია. ამიტომ მან ხელი მოაწერა სამშვიდობო ხელშეკრულებას, რომლის მიხედვითაც იგი ტრაიანეს ყველა დაპყრობაზე არაბეთის გარდა უარს ამბობდა. იგი წინამორბედისგან განსხვავებით ყურადღებას თავდაცვას უფრო უთმობდა. მის დროს ხდებოდა იმპერიის საზღვრებზე ციხესიმაგრეების და სხვა თავდაცვითი შენობების მშენებლობა. 
 
 აღმოსავლეთში დაპყრობებზე უარმა სამხედროებში უკმაყოფილება გამოიწვია. მოეწყო შეთქმულება, მაგრამ იგი გახსნილი იყო და იმპერატორმა შეთქმულნი სასტიკად დასაჯა. ამან სენატის უკმაყოფილება გამოიწვია, მაგრამ ახალი იმპერატორი დაპირდა სენატს რომ სასამართლოს გარეშე არავის არ დასჯიდა, რის შემდეგაც [[118]] წელს იგი სცნეს იმპერატორად.
 
-ადრიანუსი ბევრს ზრუნავდა ქალაქების კეთილმოწყობაზე. იგი ასევე ცდილობდა მოეგვარებინა კრიზისი, რომელიც ტრაიანის აგრესიული საგარეო პოლიტიკის შედეგად შეიქმნა. მისი მმართველობის პერიოდში რომის საგარეო პოლიტიკა დამპყრობლურისგან თავდაცვითზე შეიცვალა. პროვინციებში აჯანყებების ჩახშობის შემდეგ მან დაიწყო სახელმწიფო და სასამართლო აპარატის გაძლიერება. მან ასევე სახელმწიფო ფოსტა შექმნა იმპერიის ცენტრსა და პროვინციებს შორის კომუნიკაციების გასაადვილებლად. პროვინციებში მმართველების მხრიდან თანამდებობის ბოროტად გამოყენების აღსაკვეთათ მან პროვინციების კურატორების პოსტი შექმნა.
+ადრეანე ბევრს ზრუნავდა ქალაქების კეთილმოწყობაზე. იგი ასევე ცდილობდა მოეგვარებინა კრიზისი, რომელიც ტრაიანეს აგრესიული საგარეო პოლიტიკის შედეგად შეიქმნა. მისი მმართველობის პერიოდში რომის საგარეო პოლიტიკა დამპყრობლურისგან თავდაცვითზე შეიცვალა. პროვინციებში აჯანყებების ჩახშობის შემდეგ მან დაიწყო სახელმწიფო და სასამართლო აპარატის გაძლიერება. მან ასევე სახელმწიფო ფოსტა შექმნა იმპერიის ცენტრსა და პროვინციებს შორის კომუნიკაციების გასაადვილებლად. პროვინციებში მმართველების მხრიდან თანამდებობის ბოროტად გამოყენების აღსაკვეთათ მან პროვინციების კურატორების პოსტი შექმნა.
 
 [[სურათი:Rome002.jpg|thumb|ქალაქ რომის გეგმა იმპერიის ეპოქაში]]
 კრიზისი იყო ასევე სამხედრო სფეროშიც. რომის მოქალაქეებში სამხედრო სამსახური აღარ ითვლებოდა უწინდებურად პრესტიჟულად, ამიტომ მსურველებიც შემცირდნენ. ადრეანუსმა ეს პრობლემა იმით გადაწყვიტა, რომ ლეგიონებში იღებდა არა მარტო რომის მოქალაქეებს, არამედ ნებისმიერ ტავისუფალ პროვინციელს. ამგვარად რომაულმა ლეგიონებმა დაკარგეს რომაული სახე, ლათინური ენა აქ მხოლოდ სამუშაო ენად დარჩა.
@@ -144,11 +144,11 @@
 ===ანტონინუს პიუსი===
 [[სურათი:Antoninus.jpg|thumb|left|ანტონიუს პიუსი]]
 
-ადრიანუსის სიკვდილის შემდეგ იმპერატორი გახდა გალური წარმოშობის სენატორი [[ანტონიუს პიუსი]]. მისი მმართველობის პერიოდში რომაელმა ლეგიონერებმა ბრიტანეთში გადაკვეთეს ადრეანუსის სიმაგრეები და კუნძულის ყველაზე ვიწრო ზოლზე ააშენეს ანტონიუსის სიმაგრე. ამის გარდა ხდებოდა დაკების და გერმანელების აჯანყებების და საზღვრებზე თავდასხმების შეჩერება. ამის გარდა აღმოსავლეთ ხმელთაშუა ზღვისპირეთში რიგი მიწისძვრები და ხანძრებო მოხდა. ხოლო [[152]] წელს ერთდროულად დაიწყო აჯანყება ეგვიპტეში, იუდეასა და აქაიაში, რომში კი შიმშილისგან ბუნტები დაიწყო.
+ადრეანეს სიკვდილის შემდეგ იმპერატორი გახდა გალური წარმოშობის სენატორი [[ანტონიუს პიუსი]]. მისი მმართველობის პერიოდში რომაელმა ლეგიონერებმა ბრიტანეთში გადაკვეთეს ადრეანუსის სიმაგრეები და კუნძულის ყველაზე ვიწრო ზოლზე ააშენეს ანტონიუსის სიმაგრე. ამის გარდა ხდებოდა დაკების და გერმანელების აჯანყებების და საზღვრებზე თავდასხმების შეჩერება. ამის გარდა აღმოსავლეთ ხმელთაშუა ზღვისპირეთში რიგი მიწისძვრები და ხანძრებო მოხდა. ხოლო [[152]] წელს ერთდროულად დაიწყო აჯანყება ეგვიპტეში, იუდეასა და აქაიაში, რომში კი შიმშილისგან ბუნტები დაიწყო.
 
 ანტონინუსმა ალიმენტარული ფონდის გაზარდა. მან ასევე შეცვალა მონების მდგომარეობა იმპერიაში, ახლა მონის მკვლელობა უკვე თავისუფალი ადამიანის მკვლელობას გაუტოლდა, ხოლო თუ მონამ თავი ტაძარს ან იმპერატორის ქადაკებას შეაფარა, მაშინ იგი ძველ პატრონს აღარ დაუბრინდებოდა.
 
-მისი საგარეო პოლიტიკა ადრიანუსის პოლიტიკისგან არ განსხვავდებოდა. ანტონინუსი [[161]] წელს გარდაიცვალა. მისი მემკვიდრე გახდა მისი შვილობილი [[მარკუს აურელიუსი]].
+მისი საგარეო პოლიტიკა ადრეანეს პოლიტიკისგან არ განსხვავდებოდა. ანტონინუსი [[161]] წელს გარდაიცვალა. მისი მემკვიდრე გახდა მისი შვილობილი [[მარკუს აურელიუსი]].
 
 ===მარკუს ავრელიუსი===
 [[სურათი:Marcus.jpg|thumb|მარკუს აურელიუსის ქანდაკება]]
@@ -172,7 +172,7 @@
 
 ===სამოქალაქო ომი===
 
-მეორე საუკუნის მიწურულს რომის იმპერიის ეკონომიკური მდგომარეობა ძალიან ცუდი იყო, სამხედრო ძალა შესუსტდა და პოლიტიკური მდგომარეობაც არასტაბილური იყო. კომოდის მკვლელობის შემდეგ რომში იმპერატორად [[პერტინაქსუსი]] გამოაცხადეს, მაგრამ ნახევარ წელში იგი პრეტორიანელებმა მოკლეს, მათ თავისებური აუქციონი მოაწყეს, ვინც მეტს გადაუხდიდა, მას აღიარებდნენ იმპერატორად. ეს "აუქციონი" სენატორმა [[დიდიანუს იულიანუსი|დიდიანუს იულიანუსმა]] მოიგო, მაგრამ იგი არ იყო ტახტზე ერთადერთი პრეტენდენტი. სირიაში [[პესცინიუს ნიგერი|პესცინიუს ნიგერმა]], ბრიტანეთში [[კლოდიუს ალბინუსი|კლოდიუს ალბინუსმა]], ხოლო პანონიაში [[სეპტიმიუს სევერუსი|სეპტიმიუს სევერუსმა]] გამოთქვეს იმპერატორიბაზე პრეტენზიები. ამ უკანასკნელის ლეგიიონებმა პირველებმა დაიკავეს რომი, სადაც პრეტორიანელებმა დიდიანუს იულიანუსი მოკლეს.
+მეორე საუკუნის მიწურულს რომის იმპერიის ეკონომიკური მდგომარეობა ძალიან ცუდი იყო, სამხედრო ძალა შესუსტდა და პოლიტიკური მდგომარეობაც არასტაბილური იყო. კომოდის მკვლელობის შემდეგ რომში იმპერატორად [[პერტინაქსუსი]] გამოაცხადეს, მაგრამ ნახევარ წელში იგი პრეტორიანელებმა მოკლეს, მათ თავისებური აუქციონი მოაწყეს, ვინც მეტს გადაუხდიდა, მას აღიარებდნენ იმპერატორად. ეს "აუქციონი" სენატორმა [[დიდიანუს იულიანე|დიდიანუს იულიანუსმა]] მოიგო, მაგრამ იგი არ იყო ტახტზე ერთადერთი პრეტენდენტი. სირიაში [[პესცინიუს ნიგერი|პესცინიუს ნიგერმა]], ბრიტანეთში [[კლოდიუს ალბინუსი|კლოდიუს ალბინუსმა]], ხოლო პანონიაში [[სეპტიმიუს სევერუსი|სეპტიმიუს სევერუსმა]] გამოთქვეს იმპერატორიბაზე პრეტენზიები. ამ უკანასკნელის ლეგიიონებმა პირველებმა დაიკავეს რომი, სადაც პრეტორიანელებმა დიდიანუს იულიანე მოკლეს.
 
 ===სეპტიმიუს სევერუსი===
 [[სურათი:Septsevo.jpg|thumb|სეპტიმიუს სევერუსის მონეტა]]
@@ -303,28 +303,28 @@
 
 [[337]] წელს კონსტანტნე გარდაიცვალა, სიკვდილამდე იგი მოინათლა, ხოლო სიკვდილის შემდეგ სენატმა იგი ღვთაებრივად აღიარა, რაც მეტყველებს იმ დროინდელ იდეოლოგიურ ვითარებაზე, ორი რელიგიის შერწყმაზე, რომელიც მოხდა ამ იმპერატორის ტახტზე ყოფნის დროს. დომინუსის ძალაუფლება ეყრდნობოდა ამიერიდან არა მარტო არმიას, არამედ დიოკლექტიანეს მიერ შექმნილ ბიუროკრატიულ მანქანას და ეკლესიას.
 
-===კონსტანციუსი და იულიანუსი===
+===კონსტანციუსი და იულიანე===
 
 კონსტანტინემ სიკვდილის წინ იმპერია გაყო თავის ვაჟებსა და ძმის შვილებს შორის. მისი გარდაცვალებისთანავე მისმა ვაჟმა [[კონსტანციუსი|კონსტანციუსმა]] მოაწყო სამხედრო აჯანყება [[კონსტანტინოპოლი|კონსტანტინოპოლში]] და მოაკვლევინა თავისი ბიძაშვილები. ამგვარად აღმოსავლეთის მმართველი გახდა კონსტანციუსი, ხოლო მის ძმას კონსტანტს დასავლეთი ერგო. მან 13 წელი გაძლო ტახტზე, იგი მხედართმავარმა მაგნეციუსმა მოკლა. ამგვარად [[351]] წელს კონსტანციუსი იმპერიის ერთადდერთი მმართველი გახდა. 
 
 ფრანკებმა და ალემანებმა განაახლეს გალიაში შემოტევები. ჯარი მათ წინააღმდეგობას ფაქტიურად ვერ უწევდა, რის შედეგადაც ბარბაროსები თავისუფლად სახლდებოდნენ გალურ სოფლებში. ამავდროულად დაიწყო ომი დუნაელ სამანტებთან და აღმოსავლეთში სპარსეთთან შუამდინარეთსა და სასომხეთის გამო. 
 
-ამ პირობების გამო კონსტანციუსმა აღმოსავლეთში კეისრად ერთერთი გადარჩენილი ბიძაშვილი გალუსი დანიშნა, მაგრამ იგი მალევე მოაკვლევინა და მის ნაცვლად მისი ძმა, [[იულიანუსი]] დანიშნა. დომინუსმა იგი გალიაში გაგზავნა საკმაოდ მცირე ჯარით, ბარბაროსების განსადევნად.
+ამ პირობების გამო კონსტანციუსმა აღმოსავლეთში კეისრად ერთერთი გადარჩენილი ბიძაშვილი გალუსი დანიშნა, მაგრამ იგი მალევე მოაკვლევინა და მის ნაცვლად მისი ძმა, [[იულიანე]] დანიშნა. დომინუსმა იგი გალიაში გაგზავნა საკმაოდ მცირე ჯარით, ბარბაროსების განსადევნად.
 
-გალიაში იულიანუსმა მოულოდნელ წარმატებებს მიაღწია. ჯარისკაცებში და ადგილობრივ მოსახლეობაში მან დიდი პოპულარობა მოიპოვა. რამდენიმეჯერ სასტიკად დაამარცხა ფრანკები, განსაკუთრებით აღსანიშნავია [[ბრძოლა არგენტორატესთან]], სადაც კეისარმა ტყვედ ფრანკების ბელადი ჩაიგდო. ამ ყველაფრით მან აღმოსავლეთშიც მოიპოვა პოპულარობა, თან იქაურმა წარმართებმა იცოდნენ რომ იულიანუსი მზეს სცემს თაყვანს და წარმართული ტრადიციების მიმდევარია. ეს ყველაფერი იულიანუსს სასურველ იმპერატორად ხდიდა წარმართებისთვის.
+გალიაში იულიანუსმა მოულოდნელ წარმატებებს მიაღწია. ჯარისკაცებში და ადგილობრივ მოსახლეობაში მან დიდი პოპულარობა მოიპოვა. რამდენიმეჯერ სასტიკად დაამარცხა ფრანკები, განსაკუთრებით აღსანიშნავია [[ბრძოლა არგენტორატესთან]], სადაც კეისარმა ტყვედ ფრანკების ბელადი ჩაიგდო. ამ ყველაფრით მან აღმოსავლეთშიც მოიპოვა პოპულარობა, თან იქაურმა წარმართებმა იცოდნენ რომ იულიანე მზეს სცემს თაყვანს და წარმართული ტრადიციების მიმდევარია. ეს ყველაფერი იულიანუსს სასურველ იმპერატორად ხდიდა წარმართებისთვის.
 
-[[სურათი:Julianus.jpg|thumb|იულიანუსის გამოსახულება მონეტაზე]]
-კონსტანციუსის ომი სპარსეთის წინააღმდეგ კი არ იყო წარმატებული, მან იულიანუსს დამატებით ჯარი მოსთხოვა, მაგრამ ჯარისკაცებმა უარი თქვეს აღმოსავლეთში წასვლაზე, აჯანყდნენ და ავგუსტუსად იულიანუსი გამოაცხადეს. დასავლეთის პროვინციებმა იგი მაშინვე სცნეს. კონსტანციუსთან ომი ამ უკანასკნელის სიკვდილის გამო იქნა აცილებული. ამგვარად [[360]] წელს იულიანუსი იმპერატორი გახდა.
+[[სურათი:Julianus.jpg|thumb|იულიანეს გამოსახულება მონეტაზე]]
+კონსტანციუსის ომი სპარსეთის წინააღმდეგ კი არ იყო წარმატებული, მან იულიანუსს დამატებით ჯარი მოსთხოვა, მაგრამ ჯარისკაცებმა უარი თქვეს აღმოსავლეთში წასვლაზე, აჯანყდნენ და ავგუსტუსად იულიანე გამოაცხადეს. დასავლეთის პროვინციებმა იგი მაშინვე სცნეს. კონსტანციუსთან ომი ამ უკანასკნელის სიკვდილის გამო იქნა აცილებული. ამგვარად [[360]] წელს იულიანე იმპერატორი გახდა.
 
 ახალი იმპერატორის ავტორიტეტი გალიაში ძალიან მაღალი იყო. იგი ყველანაერად ცდილობდა აღმოსავლეთშიც ისეტივე ავტორიტეტი მოეპოვებინა, იგი მფარველობდა ქალაქებს და ზრუნავდა იმპერიის საზღვრების გამაგრებაზე. 
 
 მან უარი თქვა ქრისტიანობაზე, როგორც სახელმწიფო რელიგიაზე და სცადა წარმართობისთვის უწინდებური პოზიცია დაებრუნებინა. მან აღადგინა ბევრი წარმართული ტაძარი და კულტი. დაარსა ღარიბებისთვის უფასო საავადმყოფოები. იგი თვლიდა რომ ქრისტიანულ ეკლესიაში არსებული უთანხმოებები ასუსტებს მას, ამიტომ დააბრუნა გადასახლებაში მყოფი ყველა ერეტიკოსი და მოაწყო სამღვდელოების კრება, სადაც ყველა ტიპის ქრისტიანული სწავლებების მიმდევრები შეკრიბა რათა კიდევ უფრო გადაეკიდებინა ისინი ერთმანეთზე.
 
-ამასთან ერთად მან სცადა წარმართობის რეორგანიზაცია, მას სურდა სხვადასხვა ტაძრების ქურუმებისგან ეკლესიის მაგვარი სტრუქტურა შეექმნა. იგი აქეზებდა ტაძტრების ქველმოქმედებას. მიუხედავად ამ ყველაფრისა იულიანუსის პოლიტიკა დიდი პოპულარობით არ სარგებლობდა და წარმართული კულტების უწინდებური დიდებით დაბრუნებაც ვერ განხორციელდა.
+ამასთან ერთად მან სცადა წარმართობის რეორგანიზაცია, მას სურდა სხვადასხვა ტაძრების ქურუმებისგან ეკლესიის მაგვარი სტრუქტურა შეექმნა. იგი აქეზებდა ტაძტრების ქველმოქმედებას. მიუხედავად ამ ყველაფრისა იულიანეს პოლიტიკა დიდი პოპულარობით არ სარგებლობდა და წარმართული კულტების უწინდებური დიდებით დაბრუნებაც ვერ განხორციელდა.
 
-იულიანუსის მოკლე მმართველობა სპარსეთთან ომში დასრულდა. [[363]] წელს იგი ბრძოლაში დაიღუპა. იგი რომის უკანასკნელი ღირსეული იმპერატორი იყო ვინც სცადა რომის სამხედრო ძალის და რელიგიის აღორძინება. მისი სიკვდილის შემდეგ ცხადი იყო რომ რომი უწინდებურ სიძლიერეს ვეღარ დაიბრუნებდა.
+იულიანეს მოკლე მმართველობა სპარსეთთან ომში დასრულდა. [[363]] წელს იგი ბრძოლაში დაიღუპა. იგი რომის უკანასკნელი ღირსეული იმპერატორი იყო ვინც სცადა რომის სამხედრო ძალის და რელიგიის აღორძინება. მისი სიკვდილის შემდეგ ცხადი იყო რომ რომი უწინდებურ სიძლიერეს ვეღარ დაიბრუნებდა.
 
-იულიანუსის სიკვდილის შემდეგ იმპერატორი [[იოვიანუსი]] გახდა. მან დაუთმო სპარსებს მესოპოტამია და დაბრუნდა ჯარის ნარჩენებით იმპერიაში. ახალმა იმპერატორმა დუბრუნა ქრისტიანებს ყიულიანუსის მიერ წართმეული პრივილეგიები და აღადგინა ქრისტიანობა როგორც სახელმწიფო რელიგია. [[364]] წელს იგი მოკვდა.
+იულიანეს სიკვდილის შემდეგ იმპერატორი [[იოვიანუსი]] გახდა. მან დაუთმო სპარსებს მესოპოტამია და დაბრუნდა ჯარის ნარჩენებით იმპერიაში. ახალმა იმპერატორმა დუბრუნა ქრისტიანებს ყიულიანეს მიერ წართმეული პრივილეგიები და აღადგინა ქრისტიანობა როგორც სახელმწიფო რელიგია. [[364]] წელს იგი მოკვდა.
 
 ===ვალენტინიანუსების დინასტია===
 
@@ -334,7 +334,7 @@
 
 დასავლეთ პროვინციებში აჯანყებების მთელმა ტალღამ იფეთქა, ბრიტანეთში ამას პიქტების, სკოტების და საქსების შემოსევაც დაემთხვა. აფრიკაში მავრები აჯანყდნენ. ყველაზე მძიმე კი გოთების აჯანყება იყო დუნაისპირეთში.
 
-ამავდროულად იულიანუსის ძმისშვილმა პროქოპიუსმა დაიკავა კონსტანტინოპოლი და თავი იმპერატორად გამოაცხადა. იგი დაპირდა არმიას იულიანუსის პოლიტიკის გაგრძელება და მათი მხარდაჭერა მოიპოვა, მაგრამ აღმოსავლელმა დიდგვაროვნებმა არ დაუჭირეს მის პოლიტიკას მხარი. ვალენტუსსმა მოახერხა ამ აჯანყების ჩახშობა და [[366]] წელს პროქოპიუსი სიკვდილით დასაჯეს.
+ამავდროულად იულიანეს ძმისშვილმა პროქოპიუსმა დაიკავა კონსტანტინოპოლი და თავი იმპერატორად გამოაცხადა. იგი დაპირდა არმიას იულიანეს პოლიტიკის გაგრძელება და მათი მხარდაჭერა მოიპოვა, მაგრამ აღმოსავლელმა დიდგვაროვნებმა არ დაუჭირეს მის პოლიტიკას მხარი. ვალენტუსსმა მოახერხა ამ აჯანყების ჩახშობა და [[366]] წელს პროქოპიუსი სიკვდილით დასაჯეს.
 
 [[366]]-[[369]] წლებში მიმდინარეობდა პროქოპიუსის მხარდამჭერ გოთებთან ბრძოლა, რაც იმპერიის გამარჯვებით დასრულდა. [[370]] წელს დუნაისპირეთში სიტუაცია დაიძაბა, მეზიუმს თავს სარმატები დაესხნენ. მათთან ბრძოლაში დაიღუპა ვალენტინიანუსი. დასავლეთ იმპერიის მმართველები გახდნენ მისი ძმები, [[ჰორაციანუსი]], რომელიც უკვე იყო მისი თანამმართველი ([[367]]-[[383]]) და მცირეწლოვანი [[ვალენტინიანუს II]] ([[375]]-[[392]]). 
 
@@ -343,7 +343,7 @@
 ამის შემდეგ გოთები თავისუფლად თარეშობდნენ მთელს აღმოსავლეთ რომის იმპერიაშიც, ისინი კონსტანტინოპოლსაც მიადგნენ, მაგრამ მისი აღება ვერ შეძლეს. ჰორაციანუსმა ესპანეთიდან [[თეოდოსე]] გამოიძახა, აღმოსავლეთ იმპერიის ავგუსტუსად დანიშნა და აჯანყების ჩახშობა დაავალა. მან ენერგიული ზომები მიიღო არმიის ბრძოლისუნარიანობის აღსადგენად და ასევე მრავალი ეფექტური დიპლომატიური ნაბიჯი გადადგა, რის წყალობითაც [[382]] წელს მოხერხდა სამშვიდობო ხელშეკრულების დადება გოთებთან. ამ მოლაპარაკების თანახმად გოთებს შეეძლოთ ილირიაში დასახლება თავისი კანონებით და ადათ წესებით. 
 
 [[სურათი:Roman_empire_395.jpg|thumb|რომის იმპერიის ადმინისტრაციული დაყოფა IV საუკუნის მიწურულს]]
-თეოდოსეს მართველობის პერიოდში მიღწეულ იქნა იმპერიის უკანასკნელი ეფემერული გაერთიანება. იგი უმეტესად დამოკიდებული იყო გოთებზე. დასავლეთ იმპერიაში კი პოლიტიკურად არასტაბილური სიტუაცია იყო. [[387]] წელს ჰორაციანუსი უზურპატორმა მაგნუს მაქსიმუსმა მოკლა. ვალენტინიანუს II-მა მოახერხა უზურპატორიხ დამარცხება და მოკვლა. ფაქტიური მმართველი კი გალური ლეგიონების მხედართმთავარი არბოგასტუსი იყო, ვინც ბოლო ბოლო [[392]] წელს მაინც შეცვალა ვალენტინიანუს II ევგენიუსით. ევგენიუსმა სცადა იულიანუსის რელიგიური პოლიტიკის აღორძინება. [[394]] წელს იგი დაამარცხა თეოდოსეს არმიამ.
+თეოდოსეს მართველობის პერიოდში მიღწეულ იქნა იმპერიის უკანასკნელი ეფემერული გაერთიანება. იგი უმეტესად დამოკიდებული იყო გოთებზე. დასავლეთ იმპერიაში კი პოლიტიკურად არასტაბილური სიტუაცია იყო. [[387]] წელს ჰორაციანუსი უზურპატორმა მაგნუს მაქსიმუსმა მოკლა. ვალენტინიანუს II-მა მოახერხა უზურპატორიხ დამარცხება და მოკვლა. ფაქტიური მმართველი კი გალური ლეგიონების მხედართმთავარი არბოგასტუსი იყო, ვინც ბოლო ბოლო [[392]] წელს მაინც შეცვალა ვალენტინიანუს II ევგენიუსით. ევგენიუსმა სცადა იულიანეს რელიგიური პოლიტიკის აღორძინება. [[394]] წელს იგი დაამარცხა თეოდოსეს არმიამ.
 
 თეოდოსეს მმართველობის პერიოდში არეანობა კათოლიკობამ საბოლოოდ დაამარცხა, იმპერატორმა ნიკეის კრებაზე მიღებული დებულებების დასაცავად ედიქტი გამოსცა [[380]] წელს. იგი ასევე ებრძოდა წარმართობას, მისი ბრძანებით დაინგრა უამრავი ტაძარი. [[393]] წელს უკანასკნელად ჩატარდა ოლიმპიური თამაშები - ანტკური და წარმართული კულტურის განუყოფელი ნაწილი.
 
