*Empty MediaWiki Message*

--- a/ტოგა.mw
+++ b/ტოგა.mw
@@ -1,2 +1,2 @@
 [[სურათი:toga.png|thumb|ტოგა]]
-'''ტოგა''' ძველ რომში მამაკაცის ტრადიციული სამოსი.
+'''ტოგა''' ძველ რომში მამაკაცის ტრადიციული სამოსი. ტოგა იყო 6 მეტრის სიგრძის ოვალური ფორმის თეთრი შალის ნაჭერი, რომელსაც [[ტუნიკა|ტუნიკის]] ზემოთ იცმევდნენ.
